# kaggle-wine-quality

./: .gitignore  index.ipynb  model.ipynb  pyproject.toml  readme.md
data/: data_description.txt
