[tool.poetry]
name = "kaggle-wine-quality"
version = "0.1.0"
description = "Domain-driven explanatory data analysis"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
matplot = "^0.1.9"
sklearn = "^0.0"
pandas = "^1.1.5"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
