[tool.poetry]
name = "kaggle-wine-quality"
version = "0.1.0"
description = "Domain-driven explanatory data analysis"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.1.5"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
scipy = "^1.5.4"
scikit-learn = "^0.23.2"
ipykernel = "^5.4.2"
eli5 = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
